--- a/index.html
+++ b/index.html
@@ -8,18 +8,30 @@
         <link type="text/css" href="style.css" rel="stylesheet">
         <script type="text/javascript" src="dictionary.js"></script>
         <script type="text/javascript" src="targetWords.js"></script>
-        <script src="game.js" defer></script>
+        <!--<script src="game.js" defer></script>-->
         <script src="script.js" defer></script>
         <title>Wordle Solver</title>
     </head>
     <body>
-        <div class="output">hi</div>
+        <button class="view-output processing" data-view-output>🤔</button>
         <div class="game">
             <header>
                 <h1 class="noselect">Wordle Solver</h1>
             </header>
             <div class="alert-container" data-alert-container>
             </div>
+            <div class="output-sheet hidden up" data-visibility="hidden" data-output-sheet>
+                <button data-close class="close">✕</button>
+                <h3>Potential Words</h3>
+                <p class="potential" data-potential></p>
+                <h3>Words to Maximize Information</h3>
+                <p class="maximize" data-maximize></p>
+                <h3>Debug Keylog</h3>
+                <p data-clear-debug>[Clear]</p>
+                <p class="debug" data-debug>
+                </p>
+            </div>
+            
             <div class="guess-grid" data-guess-grid>
                 <div class="tile"></div>
                 <div class="tile"></div>
@@ -88,12 +100,12 @@
                         </svg>
                     </button>
                     <h2 class="controls-label">Tile Controls</h2>
-                    <button class="key long" data-correct data-inactive>✓ (1)</button>
-                    <button class="key long" data-wrong-location data-inactive>? (2)</button>
-                    <button class="key long" data-incorrect data-inactive>X (3)</button>
-                    <button class="key long clear" data-clear data-inactive>CLEAR (4)</button>
-                    <button class="key long reset" data-reset data-inactive>RESET</button>
-            </div>    
-        </div> 
+                        <button class="key long inactive" data-correct data-control data-set-correct>✓ (1)</button>
+                    <button class="key long inactive" data-wrong-location data-control data-set-wrong-location>? (2)</button>
+                    <button class="key long inactive" data-incorrect data-control data-set-wrong>X (3)</button>
+                    <button class="key long clear inactive" data-clear data-control>CLEAR (4)</button>
+                    <button class="key long reset inactive" data-reset data-control>RESET</button> 
+        </div>
+        <script type="text/javascript" src="solverInterface.js"></script> 
     </body>
 </html>
